parser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package parser;
import java.util.ArrayList;
import syntax.*;
import main.CompileError;

public class MiniJavaParser implements MiniJavaParserConstants {

// Program expansions
  static final public Program JProgram() throws ParseException {
  MainClass m; ArrayList<ClassDecl> cl = new ArrayList<ClassDecl>();
    try {
      m = JMainClass();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        cl = JClassDeclList();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(0);
                  {if (true) return new Program(m, cl);}
    } catch (ParseException e) {
                syntax_error(e);
                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public MainClass JMainClass() throws ParseException {
  Identifier cn; Identifier arg; Statement s;
    jj_consume_token(CLASS);
    cn = JIdentifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    arg = JIdentifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = JStatement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
          {if (true) return new MainClass(cn, arg, s);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<ClassDecl> JClassDeclList() throws ParseException {
  ClassDecl cd; ArrayList<ClassDecl> cl = new ArrayList<ClassDecl>();
    cd = JClassDecl();
                            cl = new ArrayList<ClassDecl>(); cl.add(cd);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      cd = JClassDecl();
                              cl.add(cd);
    }
          {if (true) return cl;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl JClassDecl() throws ParseException {
  ClassDecl cd;
    if (jj_2_1(3)) {
      cd = JExtendedClassDecl();
          {if (true) return cd;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        cd = JRootClassDecl();
          {if (true) return cd;}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public SimpleClassDecl JRootClassDecl() throws ParseException {
  Identifier cn; ArrayList<VarDecl> vl = new ArrayList<VarDecl>(); ArrayList<MethodDecl> ml = new ArrayList<MethodDecl>();
    jj_consume_token(CLASS);
    cn = JIdentifier();
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:
      vl = JVarDeclList();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      ml = JMethodDeclList();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
          {if (true) return new SimpleClassDecl(cn, vl, ml);}
    throw new Error("Missing return statement in function");
  }

  static final public ExtendingClassDecl JExtendedClassDecl() throws ParseException {
  Identifier cn; Identifier scn; ArrayList<VarDecl> vl = new ArrayList<VarDecl>(); ArrayList<MethodDecl> ml = new ArrayList<MethodDecl>();
    jj_consume_token(CLASS);
    cn = JIdentifier();
    jj_consume_token(EXTENDS);
    scn = JIdentifier();
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:
      vl = JVarDeclList();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PUBLIC:
      ml = JMethodDeclList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
          {if (true) return new ExtendingClassDecl(cn, scn, vl, ml);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<VarDecl> JVarDeclList() throws ParseException {
  VarDecl vd; ArrayList<VarDecl> vl = new ArrayList<VarDecl>();
    vd = JVarDecl();
                          vl = new ArrayList<VarDecl>(); vl.add(vd);
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      vd = JVarDecl();
                                         vl.add(vd);
    }
          {if (true) return vl;}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl JVarDecl() throws ParseException {
  Type t; Identifier i;
    t = JType();
    i = JIdentifier();
    jj_consume_token(SEMICOLON);
          {if (true) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<MethodDecl> JMethodDeclList() throws ParseException {
  MethodDecl md; ArrayList<MethodDecl> ml = new ArrayList<MethodDecl>();
    md = JMethodDecl();
                             ml = new ArrayList<MethodDecl>(); ml.add(md);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      md = JMethodDecl();
                               ml.add(md);
    }
          {if (true) return ml;}
    throw new Error("Missing return statement in function");
  }

// Method declaration expansions
  static final public MethodDecl JMethodDecl() throws ParseException {
        Type t;
        Identifier i;
        Expression e;
        ArrayList<Formal> fl = new ArrayList<Formal>();
        ArrayList<VarDecl> vl = new ArrayList<VarDecl>();
        ArrayList<Statement> sl = new ArrayList<Statement>();
    jj_consume_token(PUBLIC);
    t = JType();
    i = JIdentifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:
      fl = JParamDeclList();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    if (jj_2_3(2147483647)) {
      vl = JVarDeclList();
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case PRINTLN:
    case LBRACE:
    case IDENTIFIER:
      sl = JStatementList();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RETURN);
    e = JExpression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
          {if (true) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Formal> JParamDeclList() throws ParseException {
  Formal f; ArrayList<Formal> fl = new ArrayList<Formal>();
    f = JParamDecl();
                           fl = new ArrayList<Formal>(); fl.add(f);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      f = JParamDeclListTail();
                                     fl.add(f);
    }
          {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal JParamDeclListTail() throws ParseException {
  Formal f;
    jj_consume_token(COMMA);
    f = JParamDecl();
          {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal JParamDecl() throws ParseException {
  Type t; Identifier i;
    t = JType();
    i = JIdentifier();
          {if (true) return new Formal( t, i);}
    throw new Error("Missing return statement in function");
  }

  static final public Type JType() throws ParseException {
  Token t;
    if (jj_2_4(3)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                     {if (true) return Type.THE_INT_ARRAY_TYPE;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
                      {if (true) return Type.THE_BOOLEAN_TYPE;}
        break;
      case INT:
        jj_consume_token(INT);
                  {if (true) return new IntegerType();}
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
                             {if (true) return new IdentifierType(t.beginLine, t.beginColumn, t.image);}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Statement> JStatementList() throws ParseException {
  Statement s; ArrayList<Statement> sl = new ArrayList<Statement>();
    s = JStatement();
                           sl = new ArrayList<Statement>(); sl.add(s);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case LBRACE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      s = JStatement();
                             sl.add(s);
    }
          {if (true) return sl;}
    throw new Error("Missing return statement in function");
  }

// Statement expansions
  static final public Statement JStatement() throws ParseException {
  Statement s;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
        s = JBlock();
                               {if (true) return s;}
        break;
      case IF:
        s = JIfStatement();
                                       {if (true) return s;}
        break;
      case WHILE:
        s = JWhileStatement();
                                          {if (true) return s;}
        break;
      case PRINTLN:
        s = JPrintCall();
                                     {if (true) return s;}
        break;
      default:
        jj_la1[13] = jj_gen;
        if (jj_2_5(2)) {
          s = JAssignment();
                                                   {if (true) return s;}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            s = JArrayAssignment();
                                           {if (true) return s;}
            break;
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (ParseException e) {
                syntax_error(e);
                skip_to_expected(e.expectedTokenSequences);
                {if (true) return new Block(new ArrayList<Statement>());}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Block JBlock() throws ParseException {
  ArrayList<Statement> sl = new ArrayList<Statement>();
    try {
      jj_consume_token(LBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case LBRACE:
      case IDENTIFIER:
        sl = JStatementList();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
                  {if (true) return new Block(sl);}
    } catch (ParseException e) {
                syntax_error(e);
                skip_to_expected(e.expectedTokenSequences);
                {if (true) return new Block(new ArrayList<Statement>());}
    }
    throw new Error("Missing return statement in function");
  }

  static final public If JIfStatement() throws ParseException {
  Token t; Expression e; Statement s1; Statement s2;
    /*
    	LOOKAHEAD(IfElseStatement()) IfElseStatement()
    	| IfThenStatement()	
    }
    
    void IfThenStatement():
    {}
    {
    	"if" "(" Expression() ")" Statement()
    }
    
    void IfElseStatement():
    {}
    {*/
            t = jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = JExpression();
    jj_consume_token(RPAREN);
    s1 = JStatement();
    jj_consume_token(ELSE);
    s2 = JStatement();
          {if (true) return new If(t.beginLine, t.beginColumn, e, s1, s2);}
    throw new Error("Missing return statement in function");
  }

  static final public While JWhileStatement() throws ParseException {
  Token t; Expression e; Statement s;
    t = jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = JExpression();
    jj_consume_token(RPAREN);
    s = JStatement();
          {if (true) return new While(t.beginLine, t.beginColumn, e, s);}
    throw new Error("Missing return statement in function");
  }

  static final public Print JPrintCall() throws ParseException {
  Token t; Expression e;
    t = jj_consume_token(PRINTLN);
    jj_consume_token(LPAREN);
    e = JExpression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
          {if (true) return new Print(t.beginLine, t.beginColumn, e);}
    throw new Error("Missing return statement in function");
  }

  static final public Assign JAssignment() throws ParseException {
  Token t; Identifier i; Expression e;
    i = JIdentifier();
    t = jj_consume_token(GETS);
    e = JExpression();
    jj_consume_token(SEMICOLON);
          {if (true) return new Assign(t.beginLine, t.beginColumn, i, e);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayAssign JArrayAssignment() throws ParseException {
  Token t; Identifier i; Expression ie; Expression ae;
    i = JIdentifier();
    jj_consume_token(LBRACKET);
    ie = JExpression();
    jj_consume_token(RBRACKET);
    t = jj_consume_token(GETS);
    ae = JExpression();
    jj_consume_token(SEMICOLON);
          {if (true) return new ArrayAssign(t.beginLine, t.beginColumn, i, ie, ae);}
    throw new Error("Missing return statement in function");
  }

// Expression expansions
  static final public Expression JExpression() throws ParseException {
  Expression e;
    if (jj_2_6(2147483647)) {
      e = JAndExpr();
                                                          {if (true) return e;}
    } else if (jj_2_7(2147483647)) {
      e = JCompareExpr();
                                                               {if (true) return e;}
    } else if (jj_2_8(2147483647)) {
      e = JPlusExpr();
                                                            {if (true) return e;}
    } else if (jj_2_9(2147483647)) {
      e = JMinusExpr();
                                                             {if (true) return e;}
    } else if (jj_2_10(2147483647)) {
      e = JMultExpr();
                                                            {if (true) return e;}
    } else if (jj_2_11(2147483647)) {
      e = JArrayLookupExpr();
                                                                   {if (true) return e;}
    } else if (jj_2_12(2147483647)) {
      e = JLengthExpr();
                                                                       {if (true) return e;}
    } else if (jj_2_13(2147483647)) {
      e = JFunctionCall();
                                                                                   {if (true) return e;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case THIS:
      case NEW:
      case NOT:
      case LPAREN:
      case IDENTIFIER:
      case INTEGER_LITERAL:
        e = JSubExpression();
                                 {if (true) return e;}
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public And JAndExpr() throws ParseException {
  Token t; Expression e1; Expression e2;
    e1 = JSubExpression();
    t = jj_consume_token(AND);
    e2 = JSubExpression();
          {if (true) return new And(t.beginLine, t.beginColumn, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public LessThan JCompareExpr() throws ParseException {
  Token t; Expression e1; Expression e2;
    e1 = JSubExpression();
    t = jj_consume_token(LESSTHAN);
    e2 = JSubExpression();
          {if (true) return new LessThan(t.beginLine, t.beginColumn, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Plus JPlusExpr() throws ParseException {
  Token t; Expression e1; Expression e2;
    e1 = JSubExpression();
    t = jj_consume_token(PLUS);
    e2 = JSubExpression();
          {if (true) return new Plus(t.beginLine, t.beginColumn, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Minus JMinusExpr() throws ParseException {
  Token t; Expression e1; Expression e2;
    e1 = JSubExpression();
    t = jj_consume_token(MINUS);
    e2 = JSubExpression();
          {if (true) return new Minus(t.beginLine, t.beginColumn, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Times JMultExpr() throws ParseException {
  Token t; Expression e1; Expression e2;
    e1 = JSubExpression();
    t = jj_consume_token(MULT);
    e2 = JSubExpression();
          {if (true) return new Times(t.beginLine, t.beginColumn, e1, e2);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayLookup JArrayLookupExpr() throws ParseException {
  Token t; Expression e; Expression ie;
    e = JSubExpression();
    t = jj_consume_token(LBRACKET);
    ie = JSubExpression();
    jj_consume_token(RBRACKET);
          {if (true) return new ArrayLookup(t.beginLine, t.beginColumn, e, ie);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayLength JLengthExpr() throws ParseException {
  Token t; Expression e;
    e = JSubExpression();
    t = jj_consume_token(DOT);
    jj_consume_token(LENGTH);
          {if (true) return new ArrayLength(t.beginLine, t.beginColumn, e);}
    throw new Error("Missing return statement in function");
  }

  static final public Call JFunctionCall() throws ParseException {
  Token t; Expression e; Identifier i; ArrayList<Expression> el = new ArrayList<Expression>();
    // Does this use the identifier type class? Probably not.
            e = JSubExpression();
    jj_consume_token(DOT);
    i = JIdentifier();
    t = jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case NOT:
    case LPAREN:
    case IDENTIFIER:
    case INTEGER_LITERAL:
      el = JMethodParams();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
          {if (true) return new Call(t.beginLine, t.beginColumn, e, i, el);}
    throw new Error("Missing return statement in function");
  }
